# Coral-Inference

./: .dockerignore  .flake8  .gitignore  ANALYSIS_STREAM_MANAGER_PATCHES.md  ARCHITECTURE_ROADMAP.md  PHASE0_BASELINE.md  PHASE1_RUNTIME_INIT.md  PHASE2_BACKEND_PLUGINS.md  PHASE3_PATCH_COMPAT.md  PHASE4_CONFIG_SYSTEM.md  PLUGIN_PUBLISHING.md  README.md  WEBAPP_CONFIG_CONTRACT.md  WEBAPP_FRONTEND_PLAN.md  WEBAPP_FRONTEND_ROADMAP.md  WEBAPP_REFACTOR_PLAN.md  WEBAPP_ROADMAP.md  pyproject.toml  t.py  test.py  version.py
.github/actions/determine-tags/: action.yml
.github/workflows/: docker-cpu.yml  docker-gpu.yml  docker-rknn.yml  docker.yml  reusable-docker-build.yml
coral_inference/: __init__.py  config.py
coral_inference/cli/: __init__.py  main.py
coral_inference/core/: __init__.py  env.py  patches.py  runtime_contract.py  runtime_package.py
coral_inference/core/managers/: patch_metrics.py  patch_pingback.py
coral_inference/core/models/: __init__.py  decorators.py  object_detection_base.py  rknn_base.py  utils.py
coral_inference/core/utils/: image_utils.py
coral_inference/models/: __init__.py
coral_inference/models/onnx/: __init__.py
coral_inference/models/rknn/: __init__.py
coral_inference/plugins/: __init__.py
coral_inference/plugins/blocks/: __init__.py
coral_inference/runtime/: __init__.py  adapters.py  backends.py  capabilities.py  catalog_client.py  compat.py  config.py  context.py  contracts.py  init.py  materialized_packages.py  model_loader.py  model_registry.py  model_type_resolver.py  offline_package.py  package_materializer.py  patches.py  plugins.py  registry.py  rknn_adapters.py  validation.py
coral_inference/webapp/: __init__.py  config.py  monitor.py  pipeline.py  services.py  stream.py
docker/config/: __init__.py  entrypoint.sh  health_check.py  monitor.py  monitor_config.md  offer.py  pipeline_cache.py  pipeline_middleware.py  route.py  start.py  supervisord.conf  web.py
docker/dockerfiles/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.rknn
examples/: runtime_web.yaml
tests/: conftest.py  test_cli.py  test_cli_web.py  test_compat.py  test_monitor_metrics_response.py  test_pipeline_cache_restore.py  test_pipeline_metadata_utils.py  test_recording_files.py  test_runtime_descriptor.py  test_runtime_init.py  test_runtime_package.py  test_runtime_plugins.py  test_runtime_rknn_fixture.py  test_runtime_validation_cli.py
tests/fixtures/: dummy_web_app.py  runtime_cli.yaml
tests/smoke/: test_cli_runtime.py  test_metrics.py  test_plugins.py  test_rknn_backend.py  test_runtime.py  test_sinks.py  test_stream_manager.py  test_webrtc.py
tests/webapp/: test_config.py  test_services.py
(+97 files in other folders)
