[tool.poetry]
name = "coral-inference"
version = "0"
description = ""
authors = ["zhaokefei <zhaokefei@tezign.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
scipy = "1.10.0"
inference = {version = "*", extras = ["http"]}


[tool.poetry.group.npu]
optional = true

[tool.poetry.group.npu.dependencies]
rknn-toolkit-lite2 = {version = "^1.6.0", source = "loopeai"}


[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
inference-gpu = {extras = ["http"], version = "*"}


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "loopeai"
url = "http://pypi.loopeai.com/simple"
priority = "supplemental"

[tool.poetry-version-plugin]
source = "init"


[build-system]
requires = ["poetry-core", "poetry-version-plugin"]
build-backend = "poetry.core.masonry.api"
