[tool.poetry]
name = "coral-inference"
version = "0.0.2"
description = ""
authors = ["zhaokefei <zhaokefei@tezign.com>"]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
scipy = "1.10.0"
inference = {version = "*", extras = ["http"]}
loguru = "^0.7.2"


[tool.poetry.group.npu]
optional = true

[tool.poetry.group.npu.dependencies]
rknn-toolkit-lite2 = {version = "^1.6.0", source = "loopeai"}


[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
inference-gpu = {extras = ["http"], version = "*"}


[[tool.poetry.source]]
name = "loopeai"
url = "http://pypi.loopeai.com/simple"
priority = "supplemental"

[tool.poetry-version-plugin]
source = "init"


[build-system]
requires = ["poetry-core", "poetry-version-plugin"]
build-backend = "poetry.core.masonry.api"
