[tool.poetry]
name = "coral-inference"
version = "0.0.3"
description = ""
authors = ["zhaokefei <zhaokefei@tezign.com>"]

[tool.poetry.dependencies]
python = "<3.13,>=3.10"
inference = {version = "*", extras = ["http"]}
loguru = "*"
psutil = "^7.0.0"
onnxruntime = "~1.21.0"


[tool.poetry.group.npu]
optional = true

[tool.poetry.group.npu.dependencies]
rknn-toolkit-lite2 = {version = "^1.6.0", source = "loopeai"}


[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
inference-gpu = {extras = ["http"], version = "*"}
onnxruntime-gpu = "~1.21.0"


[[tool.poetry.source]]
name = "loopeai"
url = "http://pypi.loopeai.com/simple"
priority = "supplemental"

[tool.poetry-version-plugin]
source = "init"


[build-system]
requires = ["poetry-core", "poetry-version-plugin"]
build-backend = "poetry.core.masonry.api"
